--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,7 @@
 	<div class="container">
 		<p class="copy">
 			&copy; {{ site.time | date: '%Y' }}
-			<a href="http://brianmaierjr.com">Brian Maier Jr.</a> Powered by
-			<a href="http://jekyllrb.com">Jekyll</a>
+			 The logbeats Compary Ltd.
 		</p>
 
 		<div class="footer-links">
