--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                  </li> 
                  {%- endfor -%}
                  <li> <a href="https://github.com/logbeats/dCairosQuest" target="_blank">GitHub</a></li>
-                 <li><a href="https://github.com/logbeats/dCairosQuest/archive/refs/heads/master.zip">Download Theme</a></li>
+                 <li><a href="https://github.com/logbeats/dCairosQuest/archive/refs/heads/master.zip">Download dCairos</a></li>
              </ul>
          </nav>
      </div>
